# Broadcom-Layer7-Migration-to-Kong

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: settings.toml
doc/: Layer7_Kong_Migration_Framework_Specification_v1.0.md  Layer7_Kong_Migration_Framework_v1.0.docx
knowledge/mappings/: assertion-to-plugin.yaml
knowledge/patterns/: ai-gateway-proxy.yaml  backend-routing.yaml  basic-auth-ldap.yaml  config-cache-scheduled.yaml  cors-standard.yaml  custom-assertions-community.yaml  custom-assertions-extended.yaml  graphql-depth-limiting.yaml  json-schema-validation.yaml  jwt-decode-validate.yaml  jwt-validation-claims.yaml  log4shell-security-filter.yaml  metrics-offboxing.yaml  mtls-certificate-validation.yaml  oauth2-token-validation.yaml  opa-integration.yaml  org-rate-quota.yaml  otk-fapi-compliance.yaml  rate-limit-basic.yaml  threat-protection-layered.yaml  xml-schema-validation.yaml
knowledge/reference/: assertion-type-catalog.yaml  graphman-entity-types.yaml
samples/complex-routing-service/: service-bundle.xml
samples/rate-limited-service/: service-bundle.xml
samples/simple-auth-service/: service-bundle.xml
src/layer7_kong_migration/: __init__.py  cli.py
src/layer7_kong_migration/ai/: __init__.py  analyzer.py  cache.py  client.py  config.py  learner.py  prompts.py
src/layer7_kong_migration/analysis/: __init__.py  classifier.py  (+1 more)
tests/unit/: test_classifier.py  test_extractors.py  test_generator.py  test_graphman.py  test_parser.py  test_vaults.py
validation/: docker-compose.yml  kong.yaml
validation/mock-api/: server.js
(+19 files in other folders)
