[project]
name = "layer7-kong-migration"
version = "0.1.0"
description = "Broadcom Layer 7 API Gateway to Kong Gateway migration framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kong Inc." }]
dependencies = [
    "anthropic>=0.40.0",
    "lxml>=5.1.0",
    "defusedxml>=0.7.1",
    "pydantic>=2.5.0",
    "ruamel.yaml>=0.18.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "dynaconf>=3.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
migrate = "layer7_kong_migration.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layer7_kong_migration"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
